--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       </nav>
     </footer>
   </div>
-  <!-- <div class="parent-container">
-    <div class="child-item child-1">Child 1</div>
+  <div class="parent-container">
+    <div class="child-item child-1">Child 1<br> More text</div>
     <div class="child-item child-2">Child 2</div>
     <div class="child-item child-3">Child 3</div>
     <div class="child-item child-4">Child 4</div>
-  </div> -->
+  </div>
 </body>
